--- a/implementations.html
+++ b/implementations.html
@@ -59,3 +59,38 @@
     </div>
 </body>
 </html>
+
+<section>
+  <h2>Monitoring & Evaluation Framework</h2>
+  <table border="1" cellpadding="8" style="width:100%; border-collapse:collapse;">
+    <thead style="background-color:#94d2bd; color:#000;">
+      <tr>
+        <th>Indicator</th>
+        <th>Method</th>
+        <th>Frequency</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Number of participants</td>
+        <td>Attendance register</td>
+        <td>Weekly</td>
+      </tr>
+      <tr>
+        <td>Participant satisfaction</td>
+        <td>Post-session survey</td>
+        <td>End of programme</td>
+      </tr>
+      <tr>
+        <td>Cultural appropriateness</td>
+        <td>Focus group feedback</td>
+        <td>Mid-point and end</td>
+      </tr>
+      <tr>
+        <td>Retention rate</td>
+        <td>Compare week 1 vs week 12 attendance</td>
+        <td>End of programme</td>
+      </tr>
+    </tbody>
+  </table>
+</section>
