--- a/implementations.html
+++ b/implementations.html
@@ -20,24 +20,44 @@
         section {
             margin-top: 30px;
         }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 15px;
+        }
+        th, td {
+            border: 1px solid #333;
+            padding: 8px;
+            text-align: left;
+        }
+        thead {
+            background-color: #94d2bd;
+        }
     </style>
 </head>
 <body>
     <h1>Implementation Plan for Inclusive Boxing Programme</h1>
     <p>This plan outlines the steps to launch and sustain a boxing initiative for Muslim women, respecting cultural and religious values.</p>
 
-    <!-- NEW SECTION: Evidence of Need -->
+    <!-- Evidence of Need -->
     <section>
         <h2>Evidence of Need</h2>
         <p>Sport England’s Active Lives survey (2023) shows that only <strong>18% of Muslim women</strong> in England participate in sport weekly, compared to 36% of the general female population. Barriers include lack of culturally appropriate spaces, limited female coaches, and concerns about modesty. Local consultations with community leaders in Birmingham confirm strong interest in female-only boxing sessions as a safe and empowering activity.</p>
     </section>
 
-    <!-- NEW SECTION: Policy Context & Delivery Structures -->
+    <!-- Policy Context -->
     <section>
         <h2>Policy Context & Delivery Structures</h2>
         <p>This initiative aligns with <strong>Sport England’s Uniting the Movement strategy</strong>, which prioritises tackling inequalities in sport participation. The <strong>Equality Act 2010</strong> requires providers to make reasonable adjustments for religious and cultural needs. Local delivery will involve partnerships with <strong>Birmingham City Council Sport Development Team</strong> and <strong>England Boxing</strong>, ensuring compliance with safeguarding standards and coach accreditation.</p>
     </section>
 
+    <!-- Sociological Analysis -->
+    <section>
+        <h2>Sociological Analysis</h2>
+        <p>The programme addresses <strong>intersectionality</strong> by recognising how gender, religion, and ethnicity combine to create unique barriers for Muslim women. Issues of <strong>social exclusion</strong> arise from limited access to culturally appropriate facilities, while <strong>cultural capital</strong> is enhanced through boxing as a confidence-building and empowering activity. These concepts inform the design of female-only sessions and culturally sensitive coaching.</p>
+    </section>
+
+    <!-- Phases -->
     <div class="phase">
         <h2>Phase 1: Planning & Research</h2>
         <ul>
@@ -74,10 +94,89 @@
         </ul>
     </div>
 
+    <!-- Logic Model -->
+    <section>
+        <h2>Logic Model / Theory of Change</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th>Inputs</th>
+                    <th>Activities</th>
+                    <th>Outputs</th>
+                    <th>Outcomes</th>
+                    <th>Impact</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Funding, coaches, equipment, venue</td>
+                    <td>Female-only sessions, coach training, community engagement</td>
+                    <td>12 weeks of sessions, trained coaches</td>
+                    <td>Improved confidence, increased participation</td>
+                    <td>Sustained engagement in sport, reduced inequalities</td>
+                </tr>
+            </tbody>
+        </table>
+    </section>
+
+    <!-- Costed Budget -->
+    <section>
+        <h2>Costed Budget</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th>Item</th>
+                    <th>Cost (£)</th>
+                    <th>Justification</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Venue hire (12 weeks)</td>
+                    <td>600</td>
+                    <td>Female-only space for privacy</td>
+                </tr>
+                <tr>
+                    <td>Equipment</td>
+                    <td>400</td>
+                    <td>Gloves, pads, mats</td>
+                </tr>
+                <tr>
+                    <td>Coach training</td>
+                    <td>250</td>
+                    <td>Cultural sensitivity and safeguarding</td>
+                </tr>
+                <tr>
+                    <td>Marketing</td>
+                    <td>150</td>
+                    <td>Flyers and social media ads</td>
+                </tr>
+                <tr>
+                    <td><strong>Total</strong></td>
+                    <td><strong>£1,400</strong></td>
+                    <td></td>
+                </tr>
+            </tbody>
+        </table>
+        <p>This budget ensures value-for-money and supports Sport England’s inclusion priorities. Potential funding sources include local authority grants and community sport funds.</p>
+    </section>
+
+    <!-- Safeguarding -->
+    <section>
+        <h2>Safeguarding & Risk Mitigation</h2>
+        <ul>
+            <li>Female-only sessions and privacy screens</li>
+            <li>DBS checks for all coaches</li>
+            <li>Emergency procedures and first aid provision</li>
+            <li>Compliance with England Boxing safeguarding policy</li>
+        </ul>
+    </section>
+
+    <!-- Monitoring & Evaluation -->
     <section>
         <h2>Monitoring & Evaluation Framework</h2>
-        <table border="1" cellpadding="8" style="width:100%; border-collapse:collapse;">
-            <thead style="background-color:#94d2bd; color:#000;">
+        <table>
+            <thead>
                 <tr>
                     <th>Indicator</th>
                     <th>Method</th>
@@ -107,6 +206,14 @@
                 </tr>
             </tbody>
         </table>
+    </section>
+
+    <!-- References -->
+    <section>
+        <h2>References</h2>
+        <p>Sport England (2023) <em>Active Lives Survey</em>. Available at: [URL]</p>
+        <p>England Boxing (2024) <em>Safeguarding Policy</em>. Available at: [URL]</p>
+        <p>Equality Act 2010. Available at: [UK Government website]</p>
     </section>
 </body>
 </html>
