--- a/Logic_Model_Table.html
+++ b/Logic_Model_Table.html
@@ -14,11 +14,16 @@
         <tbody>
             <tr>
                 <td>Funding (£12,000), venue, culturally sensitive coaches, boxing equipment</td>
-                <td>Community engagement, coach training, inclusive boxing sessions</td>
-                <td>2 trained coaches, 3 weekly sessions, 30 participants enrolled</td>
-                <td>Increased confidence, improved physical activity levels, positive attitudes toward sport</td>
+                <td>Community engagement (Weeks 1–2), coach training (Weeks 3–4), inclusive boxing sessions (Weeks 5–16)</td>
+                <td>2 trained coaches, 3 weekly sessions for 12 weeks, 30 participants enrolled</td>
+                <td>Increase physical activity by 20%, retention rate of 80%, improved confidence scores in post-program survey</td>
                 <td>Sustained participation among Muslim women, greater representation in local sport, improved health and social inclusion</td>
             </tr>
         </tbody>
     </table>
+
+    <!-- Explanatory paragraph linking to policy and sociology -->
+    <p style="margin-top:15px;">
+        This logic model aligns with <em>Sport England’s Uniting the Movement</em> strategy by tackling inequalities in participation. Activities such as female-only sessions and culturally sensitive coaching address intersectional barriers (gender, religion, ethnicity) and issues of social exclusion. Outcomes will be monitored through attendance data and confidence surveys, aiming for a 20% increase in weekly physical activity and an 80% retention rate after 12 weeks.
+    </p>
 </section>
