--- a/Logic_Model_Table.html
+++ b/Logic_Model_Table.html
@@ -4,11 +4,13 @@
     <table border="1" cellpadding="8" style="border-collapse: collapse; width: 100%; background-color: #f9f9f9;">
         <thead style="background-color: #005f73; color: #fff;">
             <tr>
-                <th>Inputs</th>
-                <th>Activities</th>
-                <th>Outputs</th>
-                <th>Short-Term Outcomes</th>
-                <th>Long-Term Impact</th>
+                <th scope="col">Inputs</th>
+                <th scope="col">Activities</th>
+                <th scope="col">Outputs</th>
+                <th scope="col">Short-Term Outcomes</th>
+                <th scope="col">Long-Term Impact</th>
+                <th scope="col">Evaluation Methods</th>
+                <th scope="col">Assumptions & External Factors</th>
             </tr>
         </thead>
         <tbody>
@@ -18,6 +20,8 @@
                 <td>2 trained coaches, 3 weekly sessions for 12 weeks, 30 participants enrolled</td>
                 <td>Increase physical activity by 20%, retention rate of 80%, improved confidence scores in post-program survey</td>
                 <td>Sustained participation among Muslim women, greater representation in local sport, improved health and social inclusion</td>
+                <td>Attendance tracking, pre/post confidence surveys, physical activity logs, feedback forms</td>
+                <td>Community support, cultural acceptance, availability of female coaches, stable funding, safe transport for participants</td>
             </tr>
         </tbody>
     </table>
