--- a/Logic_Model_Table.html
+++ b/Logic_Model_Table.html
@@ -1,33 +1,35 @@
 
-<section>
-    <h2>Logic Model for Inclusive Boxing Program</h2>
-    <table border="1" cellpadding="8" style="border-collapse: collapse; width: 100%; background-color: #f9f9f9;">
-        <thead style="background-color: #005f73; color: #fff;">
-            <tr>
-                <th scope="col">Inputs</th>
-                <th scope="col">Activities</th>
-                <th scope="col">Outputs</th>
-                <th scope="col">Short-Term Outcomes</th>
-                <th scope="col">Long-Term Impact</th>
-                <th scope="col">Evaluation Methods</th>
-                <th scope="col">Assumptions & External Factors</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Funding (£12,000), venue, culturally sensitive coaches, boxing equipment</td>
-                <td>Community engagement (Weeks 1–2), coach training (Weeks 3–4), inclusive boxing sessions (Weeks 5–16)</td>
-                <td>2 trained coaches, 3 weekly sessions for 12 weeks, 30 participants enrolled</td>
-                <td>Increase physical activity by 20%, retention rate of 80%, improved confidence scores in post-program survey</td>
-                <td>Sustained participation among Muslim women, greater representation in local sport, improved health and social inclusion</td>
-                <td>Attendance tracking, pre/post confidence surveys, physical activity logs, feedback forms</td>
-                <td>Community support, cultural acceptance, availability of female coaches, stable funding, safe transport for participants</td>
-            </tr>
-        </tbody>
-    </table>
+<section style="padding: 20px; font-family: Arial, sans-serif;">
+    <h2 style="text-align: center; color: #005f73;">Logic Model for Inclusive Boxing Program</h2>
+    
+    <div style="overflow-x: auto;">
+        <table style="width: 100%; border-collapse: collapse; background-color: #f9f9f9; font-size: 14px;">
+            <thead style="background-color: #005f73; color: #fff;">
+                <tr>
+                    <th scope="col" style="padding: 10px;">Inputs</th>
+                    <th scope="col" style="padding: 10px;">Activities</th>
+                    <th scope="col" style="padding: 10px;">Outputs</th>
+                    <th scope="col" style="padding: 10px;">Short-Term Outcomes</th>
+                    <th scope="col" style="padding: 10px;">Long-Term Impact</th>
+                    <th scope="col" style="padding: 10px;">Evaluation Methods</th>
+                    <th scope="col" style="padding: 10px;">Assumptions & External Factors</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr style="border-bottom: 1px solid #ccc;">
+                    <td style="padding: 10px;">Funding (£12,000), venue, culturally sensitive coaches, boxing equipment</td>
+                    <td style="padding: 10px;">Community engagement (Weeks 1–2), coach training (Weeks 3–4), inclusive boxing sessions (Weeks 5–16)</td>
+                    <td style="padding: 10px;">2 trained coaches, 3 weekly sessions for 12 weeks, 30 participants enrolled</td>
+                    <td style="padding: 10px;">Increase physical activity by 20%, retention rate of 80%, improved confidence scores in post-program survey</td>
+                    <td style="padding: 10px;">Sustained participation among Muslim women, greater representation in local sport, improved health and social inclusion</td>
+                    <td style="padding: 10px;">Attendance tracking, pre/post confidence surveys, physical activity logs, feedback forms</td>
+                    <td style="padding: 10px;">Community support, cultural acceptance, availability of female coaches, stable funding, safe transport for participants</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 
-    <!-- Explanatory paragraph linking to policy and sociology -->
-    <p style="margin-top:15px;">
+    <p style="margin-top: 15px; line-height: 1.6;">
         This logic model aligns with <em>Sport England’s Uniting the Movement</em> strategy by tackling inequalities in participation. Activities such as female-only sessions and culturally sensitive coaching address intersectional barriers (gender, religion, ethnicity) and issues of social exclusion. Outcomes will be monitored through attendance data and confidence surveys, aiming for a 20% increase in weekly physical activity and an 80% retention rate after 12 weeks.
     </p>
 </section>
