--- a/Logic_Model_Table.html
+++ b/Logic_Model_Table.html
@@ -1,18 +1,36 @@
 
 <section style="padding: 20px; font-family: Arial, sans-serif;">
-    <h2 style="text-align: center; color: #005f73;">Logic Model for Inclusive Boxing Program</h2>
-    
+    <h2 style="text-align: center; color: #005f73;">Inclusive Boxing Program: Strategic Plan</h2>
+
+    <!-- Issue Statement -->
+    <h3 style="color: #0a9396;">Issue Statement</h3>
+    <p style="line-height: 1.6;">
+        Muslim women in Birmingham face significant barriers to sport participation due to cultural norms, lack of female-only spaces, and limited representation in local clubs. 
+        Sport England data (2023) shows that only 18% of Muslim women meet recommended physical activity levels compared to 32% of the general female population. 
+        This initiative aims to tackle these inequalities by creating a culturally sensitive, female-only boxing program that promotes health, confidence, and social inclusion.
+    </p>
+
+    <!-- Politico-Sporting Structures -->
+    <h3 style="color: #0a9396;">Structures, Agencies and Policies</h3>
+    <p style="line-height: 1.6;">
+        The program aligns with <em>Sport England’s Uniting the Movement</em> strategy and the <em>Equality Act 2010</em>, which mandate inclusive opportunities. 
+        Delivery will involve local Active Partnerships, Birmingham City Council, and community organisations to ensure safe, culturally appropriate provision. 
+        Funding is supported through Sport England’s Tackling Inequalities Fund.
+    </p>
+
+    <!-- Logic Model -->
+    <h3 style="color: #0a9396;">Logic Model</h3>
     <div style="overflow-x: auto;">
         <table style="width: 100%; border-collapse: collapse; background-color: #f9f9f9; font-size: 14px;">
             <thead style="background-color: #005f73; color: #fff;">
                 <tr>
-                    <th scope="col" style="padding: 10px;">Inputs</th>
-                    <th scope="col" style="padding: 10px;">Activities</th>
-                    <th scope="col" style="padding: 10px;">Outputs</th>
-                    <th scope="col" style="padding: 10px;">Short-Term Outcomes</th>
-                    <th scope="col" style="padding: 10px;">Long-Term Impact</th>
-                    <th scope="col" style="padding: 10px;">Evaluation Methods</th>
-                    <th scope="col" style="padding: 10px;">Assumptions & External Factors</th>
+                    <th style="padding: 10px;">Inputs</th>
+                    <th style="padding: 10px;">Activities</th>
+                    <th style="padding: 10px;">Outputs</th>
+                    <th style="padding: 10px;">Short-Term Outcomes</th>
+                    <th style="padding: 10px;">Long-Term Impact</th>
+                    <th style="padding: 10px;">Evaluation Methods</th>
+                    <th style="padding: 10px;">Assumptions & External Factors</th>
                 </tr>
             </thead>
             <tbody>
@@ -29,7 +47,45 @@
         </table>
     </div>
 
-    <p style="margin-top: 15px; line-height: 1.6;">
-        This logic model aligns with <em>Sport England’s Uniting the Movement</em> strategy by tackling inequalities in participation. Activities such as female-only sessions and culturally sensitive coaching address intersectional barriers (gender, religion, ethnicity) and issues of social exclusion. Outcomes will be monitored through attendance data and confidence surveys, aiming for a 20% increase in weekly physical activity and an 80% retention rate after 12 weeks.
+    <!-- Delivery Plan -->
+    <h3 style="color: #0a9396;">Delivery Plan</h3>
+    <ul style="line-height: 1.6;">
+        <li><strong>Target Group:</strong> Muslim women aged 18–40 in Birmingham</li>
+        <li><strong>Setting:</strong> Female-only community sports hall</li>
+        <li><strong>Partners:</strong> Local mosques, Birmingham City Council, Active Partnerships</li>
+        <li><strong>Safeguarding:</strong> DBS-checked female coaches, privacy screens, cultural sensitivity training</li>
+        <li><strong>Risk Mitigation:</strong> Safe transport options, emergency procedures, insurance cover</li>
+    </ul>
+
+    <!-- Costed Budget -->
+    <h3 style="color: #0a9396;">Costed Budget</h3>
+    <table style="width: 100%; border-collapse: collapse; background-color: #f9f9f9; font-size: 14px;">
+        <thead style="background-color: #005f73; color: #fff;">
+            <tr>
+                <th style="padding: 10px;">Item</th>
+                <th style="padding: 10px;">Cost (£)</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr><td style="padding: 10px;">Venue hire (16 weeks)</td><td style="padding: 10px;">3,200</td></tr>
+            <tr><td style="padding: 10px;">Coach fees (2 coaches)</td><td style="padding: 10px;">4,800</td></tr>
+            <tr><td style="padding: 10px;">Equipment (gloves, pads)</td><td style="padding: 10px;">2,000</td></tr>
+            <tr><td style="padding: 10px;">Marketing & community engagement</td><td style="padding: 10px;">1,000</td></tr>
+            <tr><td style="padding: 10px;">Safeguarding & training</td><td style="padding: 10px;">1,000</td></tr>
+            <tr><td style="padding: 10px;"><strong>Total</strong></td><td style="padding: 10px;"><strong>12,000</strong></td></tr>
+        </tbody>
+    </table>
+
+    <!-- Monitoring & Evaluation -->
+    <h3 style="color: #0a9396;">Monitoring and Evaluation</h3>
+    <p style="line-height: 1.6;">
+        Data will be collected through attendance logs, pre/post confidence surveys, and physical activity diaries. 
+        Feedback will be analysed monthly to adapt sessions and improve retention. A final report will summarise outcomes against targets and inform future funding bids.
     </p>
-</section>
+
+    <!-- References -->
+    <h3 style="color: #0a9396;">References</h3>
+    <p style="line-height: 1.6; font-size: 14px;">
+        Sport England (2023) <em>Uniting the Movement</em>. Available at: https://www.sportengland.org  
+        Equality Act 2010. Available at: https://www.legislation.gov.uk  
+    </p>
