--- a/Monitoring_Evaluation_Framework.html
+++ b/Monitoring_Evaluation_Framework.html
@@ -1,12 +1,22 @@
 
 <section>
-    <h2>Monitoring & Evaluation Framework</h2>
+    <h2>Monitoring &amp; Evaluation Framework</h2>
+    <p>
+        Monitoring and evaluation are essential to ensure this initiative achieves its intended outcomes and aligns with UK sport development standards.
+        This framework links directly to our <strong>logic model</strong>, measuring progress towards increased participation, improved wellbeing, and social inclusion.
+        Indicators have been selected based on <em>Sport England evaluation guidelines</em> and sociological principles of empowerment and equity.
+    </p>
+
+    <p><strong>Policy Alignment:</strong> This approach reflects priorities in the <em>Sport England Strategy (2021–2031)</em> and local authority health and wellbeing plans.</p>
+    <p><strong>Sociological Rationale:</strong> Indicators such as retention and satisfaction address barriers to participation and give voice to underrepresented groups.</p>
+
     <table border="1" cellpadding="8" style="border-collapse: collapse; width: 100%; background-color: #f9f9f9;">
         <thead style="background-color: #005f73; color: #fff;">
             <tr>
                 <th>Indicator</th>
                 <th>Method</th>
                 <th>Frequency</th>
+                <th>Outcome Link</th>
                 <th>Feedback Loop</th>
             </tr>
         </thead>
@@ -15,26 +25,32 @@
                 <td>Attendance numbers</td>
                 <td>Session registers</td>
                 <td>Weekly</td>
-                <td>Adjust session times and venues</td>
+                <td>Improved access and participation</td>
+                <td>Programme coordinator reviews weekly and adjusts session times within 2 weeks</td>
             </tr>
             <tr>
                 <td>Participant satisfaction</td>
                 <td>Anonymous surveys</td>
                 <td>Quarterly</td>
-                <td>Modify coaching approach</td>
+                <td>Empowerment and positive experience</td>
+                <td>Modify coaching approach based on survey results</td>
             </tr>
             <tr>
                 <td>Retention rate</td>
                 <td>Compare enrolment vs. ongoing participation</td>
                 <td>Every 6 months</td>
-                <td>Inform expansion decisions</td>
+                <td>Sustained engagement and inclusion</td>
+                <td>Inform expansion and resource allocation decisions</td>
             </tr>
             <tr>
                 <td>Health and wellbeing outcomes</td>
                 <td>Self-reported physical activity and confidence</td>
                 <td>Baseline + 6 months</td>
-                <td>Report to funders and stakeholders</td>
+                <td>Improved physical and mental wellbeing</td>
+                <td>Report to funders and stakeholders; adjust programme design</td>
             </tr>
         </tbody>
     </table>
+
+    <p><strong>References:</strong> Sport England (2021) <em>Uniting the Movement Strategy</em>. Available at: <a href="https://www.sportengland.org">sportengland.org</a></p>
 </section>
