--- a/Monitoring_Evaluation_Framework.html
+++ b/Monitoring_Evaluation_Framework.html
@@ -1,15 +1,19 @@
 
 <section>
     <h2>Monitoring &amp; Evaluation Framework</h2>
+    
+    <!-- Introductory Context -->
     <p>
         Monitoring and evaluation are essential to ensure this initiative achieves its intended outcomes and aligns with UK sport development standards.
-        This framework links directly to our <strong>logic model</strong>, measuring progress towards increased participation, improved wellbeing, and social inclusion.
+        This framework connects directly to our <strong>logic model</strong>, measuring progress towards increased participation, improved wellbeing, and social inclusion.
         Indicators have been selected based on <em>Sport England evaluation guidelines</em> and sociological principles of empowerment and equity.
     </p>
 
+    <!-- Policy and Sociological Context -->
     <p><strong>Policy Alignment:</strong> This approach reflects priorities in the <em>Sport England Strategy (2021–2031)</em> and local authority health and wellbeing plans.</p>
     <p><strong>Sociological Rationale:</strong> Indicators such as retention and satisfaction address barriers to participation and give voice to underrepresented groups.</p>
 
+    <!-- Enhanced Table -->
     <table border="1" cellpadding="8" style="border-collapse: collapse; width: 100%; background-color: #f9f9f9;">
         <thead style="background-color: #005f73; color: #fff;">
             <tr>
@@ -52,5 +56,10 @@
         </tbody>
     </table>
 
-    <p><strong>References:</strong> Sport England (2021) <em>Uniting the Movement Strategy</em>. Available at: <a href="https://www.sportengland.org">sportengland.org</a></p>
+    <!-- References -->
+    <p><strong>References:</strong></p>
+    <ul>
+        <li>Sport England (2021) <em>Uniting the Movement Strategy</em>. Available at: <a href="https://www.sportengland.org">https://www.sportengland.org</a></li>
+        <li>Coalter, F. (2013) <em>Sport for Development: What Game Are We Playing?</em> Routledge.</li>
+    </ul>
 </section>
