--- a/index.html
+++ b/index.html
@@ -195,26 +195,21 @@
   </ul>
 </section>
 
+
 <!-- References -->
 <section aria-labelledby="references">
   <h2 id="references">References</h2>
   <p>
-    Sport England (2023) <em>Active Lives Adult Survey</em>. Available at: [URL] (Accessed: 10 December 2025).<br>
-    England Boxing (2024) <em>Safeguarding Policy</em>. Available at: [URL].
+    Sport England (2023) <em>Active Lives Adult Survey</em>. Available at: 
+    <a href="https://www.sportengland.org/research-and-data/data/active-lives" target="_blank" rel="noopener noreferrer">
+      https://www.sportengland.org/research-and-data/data/active-lives
+    </a> (Accessed: 10 December 2025).<br><br>
+
+    England Boxing (2024) <em>Safeguarding Policy</em>. Available at: 
+    <a href="https://www.englandboxing.org/clubs/safeguarding" target="_blank" rel="noopener noreferrer">
+      https://www.englandboxing.org/clubs/safeguarding
+    </a> (Accessed: 10 December 2025).
   </p>
 </section>
 
-</main>
 
-<!-- Footer -->
-<footer>
-  <p class="note">
-    © <span id="year"></span> Inclusivity in Sport • Built by Hamzah Khan
-  </p>
-</footer>
-
-<script>
-  document.getElementById('year').textContent = new Date().getFullYear();
-</script>
-</body>
-</html>
